--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes moveUnderline {
+    0% {
+      width: 0;
+      left: 0;
+    }
+    100% {
+      width: 100%;
+      left: 0;
+    }
+  }
+  
+  .underline-animation {
+    position: relative;
+    text-decoration: none;
+  }
+  
+  .underline-animation::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 4px; 
+    background-color: #7878bc;
+    transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
+  }
+  
+  .underline-animation:hover::after {
+    animation: moveUnderline 0.3s ease-in-out forwards;
+    width: 100%;
+    left: 0;
+  }
+  
